<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="calculadora_title_txt">Calculator</string>
    <string name="calculadora_edit_n1">Number 1</string>
    <string name="calculadora_edit_n2">Number 2</string>
    <string name="calculadora_btn_sumar">Add</string>
    <string name="calculadora_btn_restar">Sub</string>
    <string name="calculadora_btn_mul">Mul</string>
    <string name="calculadora_btn_div">Div</string>
    <string name="calculadora_resultado">Result</string>
    <string name="calculadora_infinito">Infinity</string>
</resources>
